@@ -474,7 +474,8 @@ DRIVER(simp,a20)        //Data East MPU: 09/90 Simpsons, The (2.0)
 DRIVER(simp,a27)        //               09/90 Simpsons, The (2.7)
 //DMD 128 x 16
 DRIVER(ckpt,a17)        //Data East MPU: 02/91 Checkpoint
-DRIVER(tmnt,101)        //Data East MPU: 05/91 Teenage Mutant Ninja Turtles (1.01)
+DRIVER(tmnt,a07)        //Data East MPU: 04/91 Teenage Mutant Ninja Turtles (A 0.7 VUK Prototype)
+DRIVER(tmnt,101)        //               05/91 Teenage Mutant Ninja Turtles (1.01)
 DRIVER(tmnt,103)        //               05/91 Teenage Mutant Ninja Turtles (1.03)
 DRIVER(tmnt,104)        //               05/91 Teenage Mutant Ninja Turtles (1.04)
 DRIVER(tmnt,104g)       //               05/91 Teenage Mutant Ninja Turtles (1.04 German)
