@@ -69,6 +69,7 @@ Shadow, The LF-4 (French)
 Spirit (initial release) & rev. 3 (MOD)
 STTNG LX-8 (MOD) (using the special L-1 sound roms, note that the special callouts can be turned off completely within the game menu)
 Swords of Fury LG-2 (German)
+Teenage Mutant Ninja Turtles A 0.7 VUK (Prototype)
 Tommy 1.02 (Belgian), 3.01 (German)
 White Water P-6 (Prototype)
 Wildfyre (One Ball MOD)
